--- a/sklad.html
+++ b/sklad.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThingSpeak Stream</title>
+    <title>TarPad</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* Your custom CSS styles can be added here */
         body {
             margin: 0px;
-            font-family: Arial, sans-serif;
+            font-family: sans-serif;, sans-serif;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -17,7 +17,7 @@
         .intro-bar {
             margin: 0px;
             width: 100%;
-            background-color: #007bff;
+            background-color: #27dbc0;
             color: white;
             padding: 1px;
             text-align: left;
@@ -35,7 +35,7 @@
             top: 63%;
             left: 50%;
             transform: translate(-50%, -50%);
-            text-align: center;
+            text-align: center;            
         }
         canvas {
             width: 100% !important;
@@ -47,7 +47,7 @@
 
 <!-- Introduction Bar -->
 <div class="intro-bar">
-    <h1>Samko Vahy</h1>
+    <h1>TarPad</h1>
 </div>
 
 <!-- Container for Donut Charts -->
@@ -115,19 +115,15 @@
                 labels: [segmentLabel, 'Voľné miesto'],
                 datasets: [{
                     data: [value, remainingValue],
-                    backgroundColor: ['#007bff', '#f3f3f3'],
-                    borderWidth: 0
+                    backgroundColor: ['#42f5da', '#e0dede'],
+                    borderWidth: 1
+
+
+
+
                 }]
             },
-            options: {
-                cutoutPercentage: 70,
-                legend: {
-                    display: false
-                },
-                tooltips: {
-                    enabled: false
-                }
-            }
+           
         });
     }
 
@@ -140,7 +136,7 @@
             .then(data => {
                 var variableValue = parseFloat(data.field1); // Parse fetched value as float
                 updateDonutChart(chartId, variableValue, segmentLabel);
-                document.getElementById(textId).innerText = variableValue.toFixed(2); // Update text
+                document.getElementById(textId).innerText = variableValue.toFixed(0) + " ks"; // Update text
             })
             .catch(error => console.error('Error fetching value:', error));
     }
@@ -152,14 +148,15 @@
         updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
         updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
 
-        updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'new', 'FGA035R07TYK3ZAK');
+        updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'Vaha5', 'FGA035R07TYK3ZAK');
         updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'samo testuje', 'Y0IK5643ZNQNIMSM');
-        updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'new', 'ED9NU29L3NW8JEN');
-        updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'new', 'P8FVKVM2EPSGYH1A');
-        updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'LABEL', 'L0IY5SXJIZMG1U9N');
-        updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'LABEL', '4YT6NKGJYI1SWWC3');
-        updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'LABEL', 'RZCZD5ABR3KMYKCW');
-        updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'LABEL', 'YSVRD66SVLCNVAOI');
+        updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'Vaha7', 'ED9NU29L3NW8JEN');
+        updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'Vaha8', 'P8FVKVM2EPSGYH1A');
+
+        updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'Vaha9', 'L0IY5SXJIZMG1U9N');
+        updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'Vaha10', '4YT6NKGJYI1SWWC3');
+        updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'Vaha11', 'RZCZD5ABR3KMYKCW');
+        updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'Vaha12', 'YSVRD66SVLCNVAOI');
     }, 3000);
 
     // Initial update
@@ -168,14 +165,15 @@
     updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'HW260', 'K2RGDF582Q5GIHS9');
     updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'HW220', 'V4RJN9G2W7GZATSK');
 
-    updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'new', 'FGA035R07TYK3ZAK');
+    updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'Vaha5', 'FGA035R07TYK3ZAK');
     updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'samo testuje', 'Y0IK5643ZNQNIMSM');
-    updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'new', 'ED9NU29L3NW8JEN');
-    updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'new', 'P8FVKVM2EPSGYH1A');
-    updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'LABEL', 'L0IY5SXJIZMG1U9N');
-    updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'LABEL', '4YT6NKGJYI1SWWC3');
-    updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'LABEL', 'RZCZD5ABR3KMYKCW');
-    updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'LABEL', 'YSVRD66SVLCNVAOI');
+    updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'Vaha7', 'ED9NU29L3NW8JEN');
+    updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'Vaha8', 'P8FVKVM2EPSGYH1A');
+
+    updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'Vaha9', 'L0IY5SXJIZMG1U9N');
+    updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'Vaha10', '4YT6NKGJYI1SWWC3');
+    updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'Vaha11', 'RZCZD5ABR3KMYKCW');
+    updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'Vaha12', 'YSVRD66SVLCNVAOI');
 </script>
 
 </body>
