--- a/sklad.html
+++ b/sklad.html
@@ -9,7 +9,7 @@
         /* Your custom CSS styles can be added here */
         body {
             margin: 0px;
-            font-family: sans-serif;, sans-serif;
+            font-family: sans-serif;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -32,29 +32,35 @@
             margin: 5px;
             background-color: #f5f5f5;
             border-radius: 10px;
-            padding-bottom:28px;
+            padding-bottom:68px;
             padding-top: 10px;
 
         }
         .chart-text {
             position: absolute;
-            top: 65%;
+            top: 56%;
             left: 50%;
             transform: translate(-50%, -50%);
             text-align: center;            
         }
-       .donut-chart-container h3 {
+        .donut-chart-container h3 {
             color: #999999;
             margin: 0;
             padding: 0;
             text-align: center;
             font-size: 15px;
-
+        }
+        .last-update {
+           margin-top: 20px;
+            bottom: 20px;
+            left: 50%;
+            text-align: center;
+            font-size: 10px;
+            color: #666;
         }
         canvas {
             width: 100% !important;
             height: 100% !important;
-
         }
     </style>
 </head>
@@ -67,69 +73,89 @@
 
 <!-- Container for Donut Charts -->
 <div class="donut-chart-container" id="donutChartContainer1">
-    <h3>H260</h3> <!-- New line added -->
+    <h3 id="widgetLabel1">H260</h3>
     <canvas class="donut-chart" id="donutChart1"></canvas>
     <div class="chart-text" id="chartText1">Loading...</div>
+    <div class="last-update" id="lastUpdate1"></div>
 </div>
+
+<!-- Repeat the container divs for the other widgets -->
 <div class="donut-chart-container" id="donutChartContainer2">
-    <h3>H220</h3> <!-- New line added -->
+    <h3 id="widgetLabel2">H220</h3>
     <canvas class="donut-chart" id="donutChart2"></canvas>
     <div class="chart-text" id="chartText2">Loading...</div>
+    <div class="last-update" id="lastUpdate2"></div>
 </div>
+
 <div class="donut-chart-container" id="donutChartContainer3">
-    <h3>HW260</h3> <!-- New line added -->
+    <h3 id="widgetLabel3">HW260</h3>
     <canvas class="donut-chart" id="donutChart3"></canvas>
     <div class="chart-text" id="chartText3">Loading...</div>
+    <div class="last-update" id="lastUpdate3"></div>
 </div>
+
 <div class="donut-chart-container" id="donutChartContainer4">
-    <h3>HW220</h3> <!-- New line added -->
+    <h3 id="widgetLabel4">HW220</h3>
     <canvas class="donut-chart" id="donutChart4"></canvas>
     <div class="chart-text" id="chartText4">Loading...</div>
+    <div class="last-update" id="lastUpdate4"></div>
 </div>
 
-<!-- Additional Donut Chart Containers -->
 <div class="donut-chart-container" id="donutChartContainer5">
-    <h3>Vaha5</h3> <!-- New line added -->
+    <h3 id="widgetLabel5">Vaha5</h3>
     <canvas class="donut-chart" id="donutChart5"></canvas>
     <div class="chart-text" id="chartText5">Loading...</div>
-</div>
-<div class="donut-chart-container" id="donutChartContainer6">
-    <h3>Samo testuje</h3> <!-- New line added -->
-    <canvas class="donut-chart" id="donutChart6"></canvas>
-    <div class="chart-text" id="chartText6">Loading...</div>
-</div>
-<div class="donut-chart-container" id="donutChartContainer7">
-    <h3>Vaha 7</h3> <!-- New line added -->
-    <canvas class="donut-chart" id="donutChart7"></canvas>
-    <div class="chart-text" id="chartText7">Loading...</div>
-</div>
-<div class="donut-chart-container" id="donutChartContainer8">
-    <h3>Vaha 8</h3> <!-- New line added -->
-    <canvas class="donut-chart" id="donutChart8"></canvas>
-    <div class="chart-text" id="chartText8">Loading...</div>
-</div>
-<!-- Additional Donut Chart Containers -->
-<div class="donut-chart-container" id="donutChartContainer9">
-    <h3>Vaha 9</h3> <!-- New line added -->
-    <canvas class="donut-chart" id="donutChart9"></canvas>
-    <div class="chart-text" id="chartText9">Loading...</div>
-</div>
-<div class="donut-chart-container" id="donutChartContainer10">
-    <h3>Vaha 10</h3> <!-- New line added -->
-    <canvas class="donut-chart" id="donutChart10"></canvas>
-    <div class="chart-text" id="chartText10">Loading...</div>
-</div>
-<div class="donut-chart-container" id="donutChartContainer11">
-    <h3>Vaha 11</h3> <!-- New line added -->
-    <canvas class="donut-chart" id="donutChart11"></canvas>
-    <div class="chart-text" id="chartText11">Loading...</div>
-</div>
-<div class="donut-chart-container" id="donutChartContainer12">
-    <h3>Vaha 12</h3> <!-- New line added -->
-    <canvas class="donut-chart" id="donutChart12"></canvas>
-    <div class="chart-text" id="chartText12">Loading...</div>
+    <div class="last-update" id="lastUpdate5"></div>
 </div>
 
+<div class="donut-chart-container" id="donutChartContainer6">
+    <h3 id="widgetLabel6">Samo testuje</h3>
+    <canvas class="donut-chart" id="donutChart6"></canvas>
+    <div class="chart-text" id="chartText6">Loading...</div>
+    <div class="last-update" id="lastUpdate6"></div>
+</div>
+
+<div class="donut-chart-container" id="donutChartContainer7">
+    <h3 id="widgetLabel7">Vaha 7</h3>
+    <canvas class="donut-chart" id="donutChart7"></canvas>
+    <div class="chart-text" id="chartText7">Loading...</div>
+    <div class="last-update" id="lastUpdate7"></div>
+</div>
+
+<div class="donut-chart-container" id="donutChartContainer8">
+    <h3 id="widgetLabel8">Vaha 8</h3>
+    <canvas class="donut-chart" id="donutChart8"></canvas>
+    <div class="chart-text" id="chartText8">Loading...</div>
+    <div class="last-update" id="lastUpdate8"></div>
+</div>
+
+<div class="donut-chart-container" id="donutChartContainer9">
+    <h3 id="widgetLabel9">Vaha 9</h3>
+    <canvas class="donut-chart" id="donutChart9"></canvas>
+    <div class="chart-text" id="chartText9">Loading...</div>
+    <div class="last-update" id="lastUpdate9"></div>
+</div>
+
+<div class="donut-chart-container" id="donutChartContainer10">
+    <h3 id="widgetLabel10">Vaha 10</h3>
+    <canvas class="donut-chart" id="donutChart10"></canvas>
+    <div class="chart-text" id="chartText10">Loading...</div>
+    <div class="last-update" id="lastUpdate10"></div>
+</div>
+
+<div class="donut-chart-container" id="donutChartContainer11">
+    <h3 id="widgetLabel11">Vaha 11</h3>
+    <canvas class="donut-chart" id="donutChart11"></canvas>
+    <div class="chart-text" id="chartText11">Loading...</div>
+    <div class="last-update" id="lastUpdate11"></div>
+</div>
+
+<div class="donut-chart-container" id="donutChartContainer12">
+    <h3 id="widgetLabel12">Vaha 12</h3>
+    <canvas class="donut-chart" id="donutChart12"></canvas>
+    <div class="chart-text" id="chartText12">Loading...</div>
+    <div class="last-update" id="lastUpdate12"></div>
+</div>
 
 <script>
     // Function to update donut chart with fetched variable value
@@ -150,52 +176,52 @@
     }
 
     // Function to fetch variable value and update donut chart
-    function updateVariableAndChart(channelId, fieldId, chartId, textId, segmentLabel, apiKey) {
+    function updateVariableAndChart(channelId, fieldId, chartId, textId, labelId, updateId, segmentLabel, apiKey) {
         var url = 'https://api.thingspeak.com/channels/' + channelId + '/fields/' + fieldId + '/last.json?api_key=' + apiKey;
 
         fetch(url)
             .then(response => response.json())
             .then(data => {
                 var variableValue = parseFloat(data.field1); // Parse fetched value as float
+                var lastUpdate = new Date(data.created_at); // Get last update time from ThingSpeak data
+
                 updateDonutChart(chartId, variableValue, segmentLabel);
                 document.getElementById(textId).innerText = variableValue.toFixed(0) + " ks"; // Update text
+                document.getElementById(updateId).innerText = "Last Update: " + lastUpdate.toLocaleString(); // Update last update time
             })
             .catch(error => console.error('Error fetching value:', error));
     }
 
     // Update charts periodically
     setInterval(function() {
-        updateVariableAndChart('2053092', '1', 'donutChart1', 'chartText1', 'počet setov', 'AT9OT4NG12NIBLFN');
-        updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'počet setov', '8S9EU2PT99T2PJFP');
-        updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'počet setov', 'K2RGDF582Q5GIHS9');
-        updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'počet setov', 'V4RJN9G2W7GZATSK');
-
-        updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'počet setov', 'FGA035R07TYK3ZAK');
-        updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'počet setov', 'Y0IK5643ZNQNIMSM');
-        updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'počet setov', 'ED9NU29L3NW8JEN');
-        updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'počet setov', 'P8FVKVM2EPSGYH1A');
-
-        updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'počet setov', 'L0IY5SXJIZMG1U9N');
-        updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'počet setov', '4YT6NKGJYI1SWWC3');
-        updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'počet setov', 'RZCZD5ABR3KMYKCW');
-        updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'počet setov', 'YSVRD66SVLCNVAOI');
+        // Update each chart and its last update time
+        updateVariableAndChart('2053092', '1', 'donutChart1', 'chartText1', 'widgetLabel1', 'lastUpdate1', 'počet setov', 'AT9OT4NG12NIBLFN');
+        updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'widgetLabel2', 'lastUpdate2', 'počet setov', '8S9EU2PT99T2PJFP');
+        updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'widgetLabel3', 'lastUpdate3', 'počet setov', 'K2RGDF582Q5GIHS9');
+        updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'widgetLabel4', 'lastUpdate4', 'počet setov', 'V4RJN9G2W7GZATSK');
+        updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'widgetLabel5', 'lastUpdate5', 'počet setov', 'FGA035R07TYK3ZAK');
+        updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'widgetLabel6', 'lastUpdate6', 'počet setov', 'Y0IK5643ZNQNIMSM');
+        updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'widgetLabel7', 'lastUpdate7', 'počet setov', 'ED9NU29L3NW8JEN');
+        updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'widgetLabel8', 'lastUpdate8', 'počet setov', 'P8FVKVM2EPSGYH1A');
+        updateVariableAndChart('2206443', '1', 'donutChart9', 'chartText9', 'widgetLabel9', 'lastUpdate9', 'počet setov', 'L0IY5SXJIZMG1U9N');
+        updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'widgetLabel10', 'lastUpdate10', 'počet setov', '4YT6NKGJYI1SWWC3');
+        updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'widgetLabel11', 'lastUpdate11', 'počet setov', 'RZCZD5ABR3KMYKCW');
+        updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'widgetLabel12', 'lastUpdate12', 'počet setov', 'YSVRD66SVLCNVAOI');
     }, 3000);
 
     // Initial update
-    updateVariableAndChart('2053092', '1', 'donutChart1', 'chartText1', 'počet setov', 'AT9OT4NG12NIBLFN');
-    updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'počet setov', '8S9EU2PT99T2PJFP');
-    updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'počet setov', 'K2RGDF582Q5GIHS9');
-    updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'počet setov', 'V4RJN9G2W7GZATSK');
-
-    updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'počet setov', 'FGA035R07TYK3ZAK');
-    updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'počet setov', 'Y0IK5643ZNQNIMSM');
-    updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'počet setov', 'ED9NU29L3NW8JEN');
-    updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'počet setov', 'P8FVKVM2EPSGYH1A');
-
-    updateVariableAndChart('2206443','1', 'donutChart9', 'chartText9', 'počet setov', 'L0IY5SXJIZMG1U9N');
-    updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'počet setov', '4YT6NKGJYI1SWWC3');
-    updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'počet setov', 'RZCZD5ABR3KMYKCW');
-    updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'počet setov', 'YSVRD66SVLCNVAOI');
+    updateVariableAndChart('2053092', '1', 'donutChart1', 'chartText1', 'widgetLabel1', 'lastUpdate1', 'počet setov', 'AT9OT4NG12NIBLFN');
+    updateVariableAndChart('2162759', '1', 'donutChart2', 'chartText2', 'widgetLabel2', 'lastUpdate2', 'počet setov', '8S9EU2PT99T2PJFP');
+    updateVariableAndChart('2162885', '1', 'donutChart3', 'chartText3', 'widgetLabel3', 'lastUpdate3', 'počet setov', 'K2RGDF582Q5GIHS9');
+    updateVariableAndChart('2162886', '1', 'donutChart4', 'chartText4', 'widgetLabel4', 'lastUpdate4', 'počet setov', 'V4RJN9G2W7GZATSK');
+    updateVariableAndChart('2206135', '1', 'donutChart5', 'chartText5', 'widgetLabel5', 'lastUpdate5', 'počet setov', 'FGA035R07TYK3ZAK');
+    updateVariableAndChart('2206137', '1', 'donutChart6', 'chartText6', 'widgetLabel6', 'lastUpdate6', 'počet setov', 'Y0IK5643ZNQNIMSM');
+    updateVariableAndChart('2206138', '1', 'donutChart7', 'chartText7', 'widgetLabel7', 'lastUpdate7', 'počet setov', 'ED9NU29L3NW8JEN');
+    updateVariableAndChart('2206140', '1', 'donutChart8', 'chartText8', 'widgetLabel8', 'lastUpdate8', 'počet setov', 'P8FVKVM2EPSGYH1A');
+    updateVariableAndChart('2206443', '1', 'donutChart9', 'chartText9', 'widgetLabel9', 'lastUpdate9', 'počet setov', 'L0IY5SXJIZMG1U9N');
+    updateVariableAndChart('2206444', '1', 'donutChart10', 'chartText10', 'widgetLabel10', 'lastUpdate10', 'počet setov', '4YT6NKGJYI1SWWC3');
+    updateVariableAndChart('2206445', '1', 'donutChart11', 'chartText11', 'widgetLabel11', 'lastUpdate11', 'počet setov', 'RZCZD5ABR3KMYKCW');
+    updateVariableAndChart('2206446', '1', 'donutChart12', 'chartText12', 'widgetLabel12', 'lastUpdate12', 'počet setov', 'YSVRD66SVLCNVAOI');
 </script>
 
 </body>
