--- a/sklad.html
+++ b/sklad.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Feather</title>
-  <link rel="icon" type="image/x-icon" href="tab_icon.svg">
-
+  <link rel="icon" type="image/x-icon" href="file://D:/Vaha%202024/Vaha%202024/16.01.2024/dizajn%20identita/tab.icon.svg">
+  
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -17,17 +17,19 @@
             flex-wrap: wrap;
             justify-content: center;
         }
-        .intro-bar {
-            margin: 0px;
-            width: 100%;
-            background-color: #27dbc0;
-            color: white;
-            padding: 1px;
-            text-align: left;
-            font-size: 10px;
-            padding-left: 8px;
-            margin-bottom: 5px;
-        }
+       .intro-bar {
+    margin: 0px;
+    width: 100%;
+    background-color: #27dbc0;
+    color: white;
+    padding: 0 20px; /* Adjusted */
+    text-align: left;
+    font-size: 16px; /* Adjusted */
+    height: 70px; /* Added */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
         .donut-chart-container {
             position: relative;
             width: 200px;
@@ -65,6 +67,39 @@
             width: 100% !important;
             height: 100% !important;
         }
+                .button-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.button-container button {   
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px 10px; /* Adjust padding as needed */
+    min-width: 130px; /* Set a fixed width for the buttons */
+    background-color: #e3e3e3;
+    color: #696969;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer; 
+    font-size: 12px;
+    font-weight: bold;
+    font-family: Helvetica, sans-serif;
+}
+
+
+
+
+
     </style>    
 </head>
 <body>
@@ -72,12 +107,24 @@
 
 <!-- Úvodná Lišta -->
 <div class="intro-bar">
-    <!-- SVG Logo -->
+
+        <!-- SVG Logo -->
     <svg width="100" height="50" xmlns="http://www.w3.org/2000/svg">
         <!-- Nahraďte hodnotu atribútu href elementu image skutočnou cestou k vášmu SVG súboru -->
-        <image xlink:href="logo_white.svg" width="100" height="50"/>       
+        <image xlink:href="file://D:/Vaha%202024/Vaha%202024/16.01.2024/dizajn%20identita/logo_white.svg" width="100" height="50"/>       
     </svg>
+
+       <!-- Button Container -->
+    <div class="button-container">
+        <button onclick="window.location.href='https://www.google.sk/?hl=sk'">firmware</button>
+        <button onclick="window.location.href='https://www.google.sk/?hl=sk'">manual for use</button>
+   
+
+
+     </div>
 </div>
+
+
 
 <!-- Container for Donut Charts -->
 <div class="donut-chart-container" id="donutChartContainer1">
