--- a/sklad.sigi/img.firmware.update/index-firmware-update.html
+++ b/sklad.sigi/img.firmware.update/index-firmware-update.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Responzívny návod s fotkami</title>
+<title>firmware update</title>
 <style>
   body {
     font-family: Arial, sans-serif;
