--- a/sklad.sigi/index.sklad.sigi.html
+++ b/sklad.sigi/index.sklad.sigi.html
@@ -21,7 +21,7 @@
        .intro-bar {
     margin: 0px;
     width: 100%;
-    background-color: #27dbc0;
+    background-color:#4d4c4c;
     color: white;
     padding: 0 20px; /* Adjusted */
     text-align: left;
@@ -77,24 +77,26 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
     margin-bottom: 20px;
+     opacity: 50;
 }
 
 .button-container button {   
     margin-left: 5px;
     margin-right: 5px;
-    padding: 10px 10px; /* Adjust padding as needed */
-    min-width: 130px; /* Set a fixed width for the buttons */
-    background-color: #e3e3e3;
-    color: #696969;
+    padding: 5px 10px; /* Adjust padding as needed */
+    min-width: 120px; /* Set a fixed width for the buttons */ 
+    background-color: #4d4c4c;
+    /*opacity: 0.7; */
+
+    color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer; 
-    font-size: 12px;
-    font-weight: bold;
-    font-family: Helvetica, sans-serif;
+    font-size: 16px;    
+    font-family: Helvetica, sans-serif;    
 }
 
 
