--- a/sklad.sigi/index.sklad.sigi.html
+++ b/sklad.sigi/index.sklad.sigi.html
@@ -19,7 +19,7 @@
             justify-content: center;
         }
        .intro-bar {
-    margin: 0px;
+     margin-bottom: 5px;
     width: 100%;
     background-color:#4d4c4c;
     color: white;
