--- a/sklad.sigi/img.firmware.update/index-firmware-update.html
+++ b/sklad.sigi/img.firmware.update/index-firmware-update.html
@@ -42,7 +42,7 @@
     font-size: 16px;
   }
   .download-button {
-    background-color: #27dbc0;
+    background-color: #ff4b14;
     border: none;
     color: black;
     padding: 10px 20px;
