--- a/sklad.sigi/img.device.manual/index-device-manual.html
+++ b/sklad.sigi/img.device.manual/index-device-manual.html
@@ -12,7 +12,7 @@
     background-color: #f4f4f4;
   }
   .top-bar {
-    background-color: #ff4b14;
+    background-color: #4d4c4c;
     padding: 1px;
     text-align: center;
     color: white;
