--- a/sklad.sigi/img.firmware.update/index-firmware-update.html
+++ b/sklad.sigi/img.firmware.update/index-firmware-update.html
@@ -12,7 +12,7 @@
     background-color: #f4f4f4;
   }
   .top-bar {
-    background-color: #999999;
+    background-color: #4d4c4c;
     padding: 10px;
     text-align: center;
     color: white;
