--- a/sklad.html
+++ b/sklad.html
@@ -157,7 +157,7 @@
 </div>
 
 <div class="donut-chart-container" id="donutChartContainer5">
-    <h3 id="widgetLabel5">Vaha5</h3>
+    <h3 id="widgetLabel5">HKL katana</h3>
     <canvas class="donut-chart" id="donutChart5"></canvas>
     <div class="chart-text" id="chartText5">Loading...</div>
     <div class="last-update" id="lastUpdate5"></div>
