--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Samayel</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <meta itemprop="name" content="Samayel">
-    <meta itemprop="description" content="made with cables">
-    <meta itemprop="image" content="screenshot.png">
-    <meta name="description" content="made with cables" />
-
     <style>
         body {
             margin: 0;
@@ -17,6 +9,7 @@
             color: #fff;
             font-family: Helvetica, Arial, sans-serif;
             overflow: hidden; /* disable scrolling / rubberband effect on mobile */
+            height:100vh;
         }
 
         canvas {
@@ -37,8 +30,14 @@
 
     </style>
 
-</head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+    <meta itemprop="name" content="Samayel">
+    <meta itemprop="description" content="made with cables">
+    <meta itemprop="image" content="screenshot.png">
+    <meta name="description" content="made with cables"/>
 
+</head>
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
 
@@ -46,21 +45,25 @@
     <script type="text/javascript" src="js/patch.js" async></script>
     
 
-    <script>
+    <script type="text/javascript">
 
-        // disable rubberband effect on mobile devices
-        document.getElementById('glcanvas').addEventListener('touchmove', (e)=>{ e.preventDefault(); }, false);
+        function showError(initiator,...args)
+        {
+            CABLES.logErrorConsole("[" + initiator + "]", ...args);
+        }
 
-
-        function patchInitialized(patch) {
+        function patchInitialized(patch)
+        {
             // You can now access the patch object (patch), register variable watchers and so on
         }
 
-        function patchFinishedLoading(patch) {
+        function patchFinishedLoading(patch)
+        {
             // The patch is ready now, all assets have been loaded
         }
 
-        document.addEventListener('CABLES.jsLoaded', function (event) {
+        document.addEventListener("CABLES.jsLoaded", function (event)
+        {
             CABLES.patch = new CABLES.Patch({
                 patch: CABLES.exportedPatch,
                 "prefixAssetPath": "",
@@ -68,12 +71,15 @@
                 "jsPath": "js/",
                 "glCanvasId": "glcanvas",
                 "glCanvasResizeToWindow": true,
+                "onError": showError,
                 "onPatchLoaded": patchInitialized,
                 "onFinishedLoading": patchFinishedLoading,
-                "canvas":{"alpha":true,"premultipliedAlpha":true} // make canvas transparent
+                "canvas": {"alpha":true, "premultipliedAlpha":true } // make canvas transparent
             });
         });
+
+        // disable rubberband effect on mobile devices
+        document.getElementById('glcanvas').addEventListener('touchmove', (e)=>{ e.preventDefault(); }, false);
     </script>
 </body>
-
 </html>
